--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,23 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.app-container {
+  .header-container {
+    .navbar {
+      z-index: 10;
+      opacity: 0.6;
+      .nav-link {
+        &.active {
+          color: red;
+        }
+      }
+    }
+  }
+}
+
+video {
+  position: fixed;
+  bottom: -70px;
+  width: 100vw;
+}
