--- a/src/component/Admin/Content/ManageUsers.scss
+++ b/src/component/Admin/Content/ManageUsers.scss
@@ -1,3 +1,16 @@
+.manager-users-container {
+  padding: 10px;
+  .users-content {
+    .btn-add-new {
+      margin: 15px 0;
+    }
+  }
+  .title {
+    font-weight: 600;
+    font-size: 20px;
+  }
+}
+
 .modal-add-user {
   .img-preview {
     height: 150px;
