--- a/src/Auth/Login.scss
+++ b/src/Auth/Login.scss
@@ -2,7 +2,19 @@
   .header {
     height: 45px;
     text-align: right;
-    border: 1px solid red;
+    padding: 5px 100px 0 100px;
+
+    button {
+      padding: 3px 15px;
+      margin-left: 15px;
+      border-radius: 5px;
+      background-color: #f9f9f9;
+      border: 1px solid;
+
+      &:hover {
+        background-color: white;
+      }
+    }
   }
 
   .title {
@@ -30,6 +42,9 @@
       margin: 20px 0;
       color: white;
       background-color: black;
+    }
+    .back {
+      cursor: pointer;
     }
   }
 }
