--- a/src/component/Auth/Login.scss
+++ b/src/component/Auth/Login.scss
@@ -1,4 +1,20 @@
 .login-container {
+  .loader-icon {
+    font-size: 14px;
+    margin-bottom: 3px;
+    color: #00d4ff;
+    animation: spin 1s infinite linear;
+  }
+
+  @keyframes spin {
+    from {
+      transform: scale(1) rotate(0deg);
+    }
+    to {
+      transform: scale(1) rotate(360deg);
+    }
+  }
+
   .header {
     height: 45px;
     text-align: right;
@@ -42,6 +58,12 @@
       margin: 20px 0;
       color: white;
       background-color: black;
+
+      &:disabled {
+        background-color: #ddd;
+        color: #afafaf;
+        cursor: no-drop;
+      }
     }
     .back {
       cursor: pointer;
