--- a/src/component/Admin/Admin.scss
+++ b/src/component/Admin/Admin.scss
@@ -11,6 +11,21 @@
   .admin-header {
     height: 40px;
     border: 1px solid green;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px 0 10px;
+
+    .leftside {
+      cursor: pointer;
+      font-size: 20px;
+      color: #666;
+    }
+
+    .rightside {
+      display: flex;
+      gap: 15px;
+    }
   }
   .admin-main {
     height: calc(100vh - 40px);
